--- a/modulo1/cookenu-backend/package.json
+++ b/modulo1/cookenu-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aula-back-arquitetura",
+  "name": "cookenu-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
